	  and resetting LIBS after XML2/CJSON check;
	  now substituting LIBCOB_CPPFLAGS
	* configure.ac: --with-cjson=local added (defines LOCAL_CJSON),
	  allowing to built-in cjson into libcob when its sources are found and
	  linkable in folder libcob (both srcdir and builddir supported);
	  takes precedence over search by means of pkg-config and/or
	  CJSON_CFLAGS and CJSON_LIBS

2019-05-20  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: set YFLAGS and DIFF_FLAGS depending on
	  available/requested options

2019-05-17  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: don't error on bad libxml2 if not explicit requested

2019-05-13  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac, gnucobol.spec: version dump to 3.1-dev
	* configure.ac: checks/defines HAVE_CJSON_H as an alternative to
	  HAVE_CJSON_CJSON_H

2019-05-05  Simon Sobisch <simonsobisch@gnu.org>

	* autogen.sh: suppress most error messages (that can also occur if
	  execution rights are already available but we can't set them)
	* configure.ac: check for curses has_mouse

2019-04-14  Ron Norman <rjn@inglenet.com>

	* configure.ac [__xlc__]: suppress compiler warning about MAXMEM
	  optimization

2019-04-06  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am (noinst_SCRIPTS) add pre-inst-env
	* configure.ac (AC_CONFIG_FILES): add pre-inst-env (template file
	  build_aux/pre-inst-env.in) and split existing entries to initialize
	  scripts to be executable

2019-04-06  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am (noinst_SCRIPTS) add pre-inst-env
	* configure.ac (AC_CONFIG_FILES): add pre-inst-env (template file
	  build_aux/pre-inst-env.in) and split existing entries to initialize
	  scripts to be executable

2019-03-15  Simon Sobisch <simonsobisch@gnu.org>

	* autogen.sh: fixed to work correctly when called as "./autogen.sh"

2019-02-18  Simon Sobisch <simonsobisch@gnu.org>

	* autogen.sh: new, wrapper for build_aux/bootstrap
	* Makefile.am: cleanup distribution rules
